# tracing-newrelic

./: .gitignore  .travis.yml  LICENSE  README.md  Setup.hs  shell.nix  tracing-newrelic.cabal
nix/: packages.nix
src/: FreeAfter.hs
src/Tracing/: NewRelic.hsc
tests/: Main.hs
